@@ -595,7 +595,7 @@ function mailtree_sort(&$lsub) {
 
 
 function sqimap_mailbox_list($imap_stream, $force=false) {
-    global $default_folder_prefix;
+    global $default_folder_prefix, $default_sub_of_inbox;
 
     if (!sqgetGlobalVar('boxesnew',$boxesnew,SQ_SESSION) || $force) {
         global $data_dir, $username, $list_special_folders_first,
@@ -713,6 +713,22 @@ function sqimap_mailbox_list($imap_stream, $force=false) {
             }
         }
 
+        /* 
+         * For systems where folders might be either under the INBOX or
+         * at the top-level (Dovecot, hMailServer), INBOX subfolders have
+         * to be added before special folders
+         */
+        if (!$default_sub_of_inbox) {
+            for($k = 0; $k < $cnt; ++$k) {
+                if (!$used[$k] && isBoxBelow(strtolower($boxesall[$k]['unformatted']), 'inbox') &&
+                    strtolower($boxesall[$k]['unformatted']) != 'inbox') {
+                    $boxesnew[] = $boxesall[$k];
+                    $used[$k] = true;
+                }
+            }
+        }
+
+
         /* List special folders and their subfolders, if requested. */
         if ($list_special_folders_first) {
             for($k = 0; $k < $cnt; ++$k) {
@@ -724,12 +740,14 @@ function sqimap_mailbox_list($imap_stream, $force=false) {
         }
 
 
-        /* Find INBOX's children */
-        for($k = 0; $k < $cnt; ++$k) {
-            if (!$used[$k] && isBoxBelow(strtolower($boxesall[$k]['unformatted']), 'inbox') &&
-                strtolower($boxesall[$k]['unformatted']) != 'inbox') {
-                $boxesnew[] = $boxesall[$k];
-                $used[$k] = true;
+        /* Find INBOX's children for systems where folders are ONLY under INBOX */
+        if ($default_sub_of_inbox) {
+            for($k = 0; $k < $cnt; ++$k) {
+                if (!$used[$k] && isBoxBelow(strtolower($boxesall[$k]['unformatted']), 'inbox') &&
+                    strtolower($boxesall[$k]['unformatted']) != 'inbox') {
+                    $boxesnew[] = $boxesall[$k];
+                    $used[$k] = true;
+                }
             }
         }
 
